# probitlcmlongit_extra

./: README.rst  pyproject.toml
src/probitlcmlongit_extra/: build_situations_list.py  create_scenario_params.py  generate_lambda.py  generate_xi.py
